--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
             </li>
             <li class="nav-item nav-bottom">
-                <a href="https://github.com/ainuls" target="_BLANK" class="nav-link">
+                <a href="https://github.com/itsyaqin" target="_BLANK" class="nav-link">
                     <i class="link-icon fab fa-fw fa-github"></i>
                     <span class="link-text">Github</span>
                 </a>
@@ -56,12 +56,16 @@
         </ul>
     </nav>
     <main>
-        <h1>This is QUICKIE..</h1>
+        <h1 style="margin-bottom: 0;">IT'S QUICKIE TIME!</h1>
+        <small style="font-weight: bold;">Lightweight & Responsive CSS Template.</small>
         <div class="box">
             <h3>Perhatian!</h3>
             <p>Quickie adalah CSS template yang lightweight dan responsif.<br>Silahkan digunakan untuk keperluan pribadi maupun komersil tanpa meminta ijin lisensi <b>selama template ini tidak diperjual belikan</b> tanpa ijin pembuat.</p>
             <p style="margin-top: 2rem;">Terimakasih.<br>Best regards, Yaqin.<br><small style="font-weight: bold;">itsyaqin@gmail.com</small></p>
         </div>
+        <h2>Lorem, ipsum dolor.</h2>
+        <p style="line-height: 1.7rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus rem earum nam magnam ipsum quae ullam possimus labore alias ut quia maiores dicta facere eius nostrum voluptates, ab iusto eligendi vitae iure enim perferendis exercitationem. Doloremque cumque molestiae rerum autem voluptatibus voluptas ipsam ab earum quis iure rem a, et odit repellat velit sapiente beatae placeat. Dolores enim ipsum tempore, quibusdam iusto alias porro ipsa! Hic obcaecati fugiat non, eum fuga enim consequuntur vero aspernatur, beatae perferendis vel voluptas maxime suscipit. Quaerat ab exercitationem dignissimos odio tempora commodi molestias natus excepturi modi libero. Vero debitis nostrum, possimus velit error asperiores.</p>
+        <p style="line-height: 1.7rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione sint praesentium eveniet placeat sapiente id voluptate veniam, modi facere debitis natus blanditiis veritatis enim ipsa! Aut minus, dolor sequi ullam magni sit reiciendis! Tempore recusandae officia quas eos quia ad quos corporis veritatis odit dolorem rem id quasi non exercitationem, qui amet soluta sunt nemo voluptates ex, laborum ipsum fugit, odio autem. Numquam iusto, officiis nobis eaque impedit doloremque quia aut obcaecati veritatis voluptatibus nulla, dolore quibusdam non similique ratione amet labore hic exercitationem corporis, libero voluptates. Modi aut placeat consectetur molestiae non nisi cum esse labore, magnam, aperiam et sed dignissimos hic quam animi porro tempora cumque architecto repellendus incidunt voluptas! Esse dolor dicta libero dolore ea, nobis id eius exercitationem at magni reprehenderit repellendus magnam quisquam distinctio eveniet. A ut sunt repellendus quaerat, sapiente aut! Alias ipsum voluptas numquam dolorum dolorem fugit quasi recusandae dolor rem perferendis praesentium blanditiis soluta mollitia non unde dolore veniam a, perspiciatis nam. Fugiat magni dicta perspiciatis dolor dolore! Eum tempore harum cum aliquid at asperiores, consectetur neque, officia accusamus debitis vero laboriosam delectus ullam ratione incidunt itaque perferendis voluptatibus maiores. Tempore vitae nihil ipsam at omnis dolorum deserunt ducimus nostrum provident quisquam a facere corrupti, nemo obcaecati enim nisi explicabo consectetur veniam est blanditiis. Odit, provident libero. Dolor possimus quisquam ipsa, laborum architecto neque omnis ab doloribus nemo necessitatibus inventore impedit nam quam nesciunt, sint deserunt quidem maxime ratione. Deserunt, recusandae animi mollitia rem, eos doloribus nemo fugiat illum minus facere quo.</p>
     </main>
 </body>
 </html>
