--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quickie - Dashboard</title>
+    <title>Quickly - Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e1e5779b9.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
         <ul class="navbar-nav">
             <li class="nav-logo">
                 <a href="#" class="nav-link">
-                    <span class="link-text">Quickie</span>
+                    <span class="link-text">Quickly</span>
                     <i class="link-icon fas fa-fw fa-angle-double-right"></i>
                 </a>
             </li>
@@ -56,11 +56,11 @@
         </ul>
     </nav>
     <main>
-        <h1 style="margin-bottom: 0;">IT'S QUICKIE TIME!</h1>
+        <h1 style="margin-bottom: 0;">IT'S QUICKLY TIME!</h1>
         <small style="font-weight: bold;">Lightweight & Responsive CSS Template.</small>
         <div class="box">
             <h3>Perhatian!</h3>
-            <p>Quickie adalah CSS template yang lightweight dan responsif.<br>Silahkan digunakan untuk keperluan pribadi maupun komersil tanpa meminta ijin lisensi <b>selama template ini tidak diperjual belikan</b> tanpa ijin pembuat.</p>
+            <p>Quickly adalah CSS template yang lightweight dan responsif.<br>Silahkan digunakan untuk keperluan pribadi maupun komersil tanpa meminta ijin lisensi <b>selama template ini tidak diperjual belikan</b> tanpa ijin pembuat.</p>
             <p style="margin-top: 2rem;">Terimakasih.<br>Best regards, Yaqin.<br><small style="font-weight: bold;">itsyaqin@gmail.com</small></p>
         </div>
         <h2>Lorem, ipsum dolor.</h2>
