--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quickly - Dashboard</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e1e5779b9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/app.min.css">
+    <link rel="stylesheet" href="assets/css/demo.css">
 </head>
-<body>
+
+<body class="quickly-light">
     <nav class="navbar">
         <ul class="navbar-nav">
-            <li class="nav-logo">
+            <li class="nav-logo nav-item">
                 <a href="#" class="nav-link">
                     <span class="link-text">Quickly</span>
                     <i class="link-icon fas fa-fw fa-angle-double-right"></i>
@@ -48,24 +51,67 @@
                 </a>
             </li>
             <li class="nav-item nav-bottom">
-                <a href="https://github.com/itsyaqin" target="_BLANK" class="nav-link">
-                    <i class="link-icon fab fa-fw fa-github"></i>
-                    <span class="link-text">Github</span>
+                <a href="#" id="btnTheme" class="nav-link">
+                    <i class="link-icon fas fa-fw fa-paint-roller"></i>
+                    <span class="link-text">Change Theme</span>
                 </a>
             </li>
         </ul>
     </nav>
     <main>
-        <h1 style="margin-bottom: 0;">IT'S QUICKLY TIME!</h1>
-        <small style="font-weight: bold;">Lightweight & Responsive CSS Template.</small>
-        <div class="box">
-            <h3>Perhatian!</h3>
-            <p>Quickly adalah CSS template yang lightweight dan responsif.<br>Silahkan digunakan untuk keperluan pribadi maupun komersil tanpa meminta ijin lisensi <b>selama template ini tidak diperjual belikan</b> tanpa ijin pembuat.</p>
-            <p style="margin-top: 2rem;">Terimakasih.<br>Best regards, Yaqin.<br><small style="font-weight: bold;">itsyaqin@gmail.com</small></p>
-        </div>
-        <h2>Lorem, ipsum dolor.</h2>
-        <p style="line-height: 1.7rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus rem earum nam magnam ipsum quae ullam possimus labore alias ut quia maiores dicta facere eius nostrum voluptates, ab iusto eligendi vitae iure enim perferendis exercitationem. Doloremque cumque molestiae rerum autem voluptatibus voluptas ipsam ab earum quis iure rem a, et odit repellat velit sapiente beatae placeat. Dolores enim ipsum tempore, quibusdam iusto alias porro ipsa! Hic obcaecati fugiat non, eum fuga enim consequuntur vero aspernatur, beatae perferendis vel voluptas maxime suscipit. Quaerat ab exercitationem dignissimos odio tempora commodi molestias natus excepturi modi libero. Vero debitis nostrum, possimus velit error asperiores.</p>
-        <p style="line-height: 1.7rem;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione sint praesentium eveniet placeat sapiente id voluptate veniam, modi facere debitis natus blanditiis veritatis enim ipsa! Aut minus, dolor sequi ullam magni sit reiciendis! Tempore recusandae officia quas eos quia ad quos corporis veritatis odit dolorem rem id quasi non exercitationem, qui amet soluta sunt nemo voluptates ex, laborum ipsum fugit, odio autem. Numquam iusto, officiis nobis eaque impedit doloremque quia aut obcaecati veritatis voluptatibus nulla, dolore quibusdam non similique ratione amet labore hic exercitationem corporis, libero voluptates. Modi aut placeat consectetur molestiae non nisi cum esse labore, magnam, aperiam et sed dignissimos hic quam animi porro tempora cumque architecto repellendus incidunt voluptas! Esse dolor dicta libero dolore ea, nobis id eius exercitationem at magni reprehenderit repellendus magnam quisquam distinctio eveniet. A ut sunt repellendus quaerat, sapiente aut! Alias ipsum voluptas numquam dolorum dolorem fugit quasi recusandae dolor rem perferendis praesentium blanditiis soluta mollitia non unde dolore veniam a, perspiciatis nam. Fugiat magni dicta perspiciatis dolor dolore! Eum tempore harum cum aliquid at asperiores, consectetur neque, officia accusamus debitis vero laboriosam delectus ullam ratione incidunt itaque perferendis voluptatibus maiores. Tempore vitae nihil ipsam at omnis dolorum deserunt ducimus nostrum provident quisquam a facere corrupti, nemo obcaecati enim nisi explicabo consectetur veniam est blanditiis. Odit, provident libero. Dolor possimus quisquam ipsa, laborum architecto neque omnis ab doloribus nemo necessitatibus inventore impedit nam quam nesciunt, sint deserunt quidem maxime ratione. Deserunt, recusandae animi mollitia rem, eos doloribus nemo fugiat illum minus facere quo.</p>
+        <section class="v-center">
+            <div class="section-body">
+                <h3>Hi there!</h3>
+                <h1 style="margin-bottom: 1rem;">Welcome to <span style="color: #ed553b;">Quickly</span></h1>
+                <p>Quickly adalah tema CSS yang ringan dan responsif. Sangat cocok digunakan untuk keperluan projek
+                    dengan skala kecil. Quickly memiliki beberapa tema bawaan yang dapat diubah sesuka hati tanpa perlu
+                    konfigurasi javascript.</p>
+                <a href="#" class="btn do-rotation">
+                    <i class="fas fa-angle-double-down fa-2x rotate-this" style="margin-right: 1rem;"></i>Download Now,
+                    Quickly!
+                </a>
+                <!-- <a href="#" class="btn do-rotation"><i class="fab fa-github fa-2x rotate-this"></i></a> -->
+            </div>
+        </section>
+        <section class="section-densed h-center">
+            <div class="section-body" style="text-align: center;">
+                <h3 style="margin-bottom: 3rem;">Why So Quickly?</h3>
+                <ul class="box mt-big">
+                    <li class="do-rotation">
+                        <i class="rotate-this fas fa-feather-alt fa-3x"></i>
+                        <h4>Lightweight</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </li>
+                    <li class="do-rotation">
+                        <i class="rotate-this fab fa-js fa-3x"></i>
+                        <h4>No Javascript</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </li>
+                    <li class="do-rotation">
+                        <i class="rotate-this fas fa-mobile fa-3x"></i>
+                        <h4>Responsive</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </li>
+                    <li class="do-rotation">
+                        <i class="rotate-this fas fa-paint-roller fa-3x"></i>
+                        <h4>Custom Themes</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section></section>
     </main>
+    <script>
+        var index = 0;
+        var theme = ['quickly', 'quickly-dark', 'quickly-light'];
+        var body = document.getElementsByTagName('body');
+        document.getElementById('btnTheme').addEventListener('click', function (e) {
+            body[0].classList.remove('quickly-dark', 'quickly-light');
+            body[0].classList.add(theme[index++]);
+            index = (index > 2) ? 0 : index;
+        });
+    </script>
 </body>
+
 </html>
