--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <i class="link-icon fas fa-fw fa-angle-double-right"></i>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a href="#" class="nav-link">
                     <i class="link-icon fas fa-fw fa-star"></i>
                     <span class="link-text">Dashboard</span>
@@ -30,6 +30,7 @@
                 <a href="#" class="nav-link">
                     <i class="link-icon fas fa-fw fa-bell"></i>
                     <span class="link-text">Notification</span>
+                    <span class="link-badge">10</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -115,10 +116,10 @@
                 <ul class="footer">
                     <li><a class="cl-primary" href="https://github.com/itsyaqin">Github</a></li>
                     <li><a class="cl-primary" href="https://facebook.com/itsyaqin">Facebook</a></li>
-                    <li style="margin-bottom: 1rem;"><a class="cl-primary" href="https://wa.me/6281937104580">WhatsApp</a></li>
+                    <li><a class="cl-primary" href="https://wa.me/6281937104580">WhatsApp</a></li>
                     <li class="d-sm-none">|</li>
                     <li class="sm-12">Code licensed <a href="https://choosealicense.com/licenses/mit/">MIT</a></li>
-                    <li class="sm-12">Yaqin, 2020</a></li>
+                    <li>Yaqin, 2020</a></li>
                 </ul>
             </div>
         </section>
