update the link

--- a/index.html
+++ b/index.html
@@ -67,11 +67,10 @@
                 <p>Quickly adalah template dashboard CSS yang ringan dan responsif. Sangat cocok digunakan untuk keperluan projek
                     dengan skala kecil. Quickly memiliki beberapa tema bawaan yang dapat diubah sesuka hati tanpa perlu
                     konfigurasi javascript.</p>
-                <a href="https://github.com/itsyaqin/quickly/archive/v0.1.zip" class="btn do-rotation">
-                    <i class="fas fa-angle-double-down fa-2x rotate-this" style="margin-right: 1rem;"></i>Download Now,
-                    Quickly!
+                <a href="https://github.com/itsyaqin/quickly/archive/v0.5.zip" class="btn do-rotation">
+                    <i class="fas fa-angle-double-down fa-2x rotate-this" style="margin-right: 1rem;"></i>Download Now, Quickly!
                 </a>
-                <h5 class="latest-ver">Latest release is v0.1</h5>
+                <h5 class="latest-ver">Latest release is v0.5</h5>
             </div>
         </section>
         <section class="section-auto bg-secondary v-row-center h-row-center">
